infra/git/gitea/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: meu-gateway-dualstack
      namespace: default
      sectionName: https
  hostnames:
    - gitea.aesthar.com.br
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gitea-http
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
